--- a/Choosyourownadventure/Properties/Resources.resx
+++ b/Choosyourownadventure/Properties/Resources.resx
@@ -118,37 +118,73 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pyramind head" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pyramind head.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Silent Hill sign" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Silent Hill sign.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pryamind" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pryamind.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Silent Hill sign" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Silent Hill sign.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="radio_interference" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\686642__newlocknew__comstatic_radio-interferenceartificial-1-5crashessignal-failure_em (1).wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="silent hill the town" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\silent hill the town.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="silent-hill-2-remake-nurse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\silent-hill-2-remake-nurse.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="images" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\images.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="nightmare" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nightmare.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Silent-Hill-2---town" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Silent-Hill-2---town.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="silent hill background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\515723__waveplaysfx__sfx-ambience-silent-hill-style-background (1).wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="silent-hill-2-brookhaven-hospital" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\silent-hill-2-brookhaven-hospital.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Pryamind head and bugs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Pryamind head and bugs.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Maybe a Horror Game-Arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Maybe a Horror Game-Arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="big bugs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\big bugs.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="silent-hil town" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\silent-hil town.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pyramind head" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pyramind head.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="hospital" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hospital.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Warning siren" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Warning Siren-SoundBible.com-898272278 (1).wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="silent hill the town" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\silent hill the town.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="silent hill elementry school" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\silent hill elementry school.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pulses" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\529136__waveplaysfx__ambient-loop-deep-ambient-pulses.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="silent-hill-2-brookhaven-hospital" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\silent-hill-2-brookhaven-hospital.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gaint bugs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gaint bugs.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Silent-Hill-2---town" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Silent-Hill-2---town.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Maybe a Horror Game-Arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Maybe a Horror Game-Arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="images" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\images.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="silent hill school gym" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\silent hill school gym.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="classroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\classroom.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
