--- a/Choosyourownadventure/Properties/Resources.resx
+++ b/Choosyourownadventure/Properties/Resources.resx
@@ -124,17 +124,17 @@
   <data name="pryamind" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pryamind.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="radio_interference" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\686642__newlocknew__comstatic_radio-interferenceartificial-1-5crashessignal-failure_em (1).wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="silent-hill-2-remake-nurse" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\silent-hill-2-remake-nurse.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="nightmare" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nightmare.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="School Hall ( great for running)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\School Hall ( great for running).jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="nightmare.hall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nightmare.hall.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Gam over" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Gam over.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="silent hill background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\515723__waveplaysfx__sfx-ambience-silent-hill-style-background (1).wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -145,8 +145,8 @@
   <data name="big bugs" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\big bugs.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="silent-hil town" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\silent-hil town.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="radio_interference" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\686642__newlocknew__comstatic_radio-interferenceartificial-1-5crashessignal-failure_em (1).wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="pyramind head" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pyramind head.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -166,6 +166,9 @@
   <data name="pulses" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\529136__waveplaysfx__ambient-loop-deep-ambient-pulses.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="silent-hil town" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\silent-hil town.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="silent-hill-2-brookhaven-hospital" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\silent-hill-2-brookhaven-hospital.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -184,7 +187,7 @@
   <data name="silent hill school gym" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\silent hill school gym.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="classroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\classroom.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Classroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Classroom.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
